--- a/_posts/2025-03-28-SWOT.MD
+++ b/_posts/2025-03-28-SWOT.MD
@@ -7,7 +7,9 @@ categories: Compassion
 
 Strengths-Weaknesses-Opportunities-Threats Analysis for Rock Rapids, Iowa
 
-Maybe TL;DR ... *I don't want to spoil ***the movie version of this book***, *but let's just say that am not too worried about some of the* ***Weaknesses***, *but there are definitely some interesting [strategic considerations that emerge from this SWOT analysis](#top-ten-strategic-considerations-for-rock-rapids-iowa).*
+Maybe TL;DR ... *I don't want to spoil ***the movie version of this book***, *but let's just say that am not too worried at all about most of the* ***Weaknesses***...
+
+In fact, the whole POINT of doing a balanced S-W-O-T is that *weaknesses* are just part of this approach to brainstorming -- it's important to be brutally frank in doing SWOT analysis -- if we don't identify a serious ToDo list of things to work on, then exercise is waste of time and ... ***we might as well hide from problems and just spend the day drinking a few cases of beer*** ... *but there ARE indeed definitely some hopeful and intriguing* **[Strategic Considerations**](#top-ten-strategic-considerations-for-rock-rapids-iowa) *which emerge from this S-W-O-T analysis.*
 
 # Table of Contents - SWOT Analysis for Rock Rapids, Iowa
 
