update the apps

--- a/INFO/5.md
+++ b/INFO/5.md
@@ -13,10 +13,18 @@ This app will function as an announcement of things that that for sale.  Not jus
 Rockrapids.store will function as a LOCAL, for friends, service-after-the-sale digital marketplace and product showcase that connects consumers with merchandise available from Rock Rapids retailers and artisans, whether from physical Main Street locations or online platforms like Etsy. The platform will create a comprehensive product database of items available for purchase locally, supporting photographs, descriptions, pricing, and availability status to help shoppers find exactly what they're seeking. Integration with online storefronts will enable Rock Rapids crafters, artists, and small-batch producers to expand their reach while maintaining their connection to the local community. Curated collection features will highlight seasonally relevant items, gift ideas, locally produced specialties, and unique finds that distinguish Rock Rapids as a shopping destination. The platform will facilitate both in-store pickup and direct shipping options, allowing distant customers with connections to Rock Rapids to support local businesses. User wish lists and product alerts will notify shoppers when desired items become available or go on sale, enhancing the connection between local merchants and interested buyers.
 
 **MVP Development Roadmap:**
-1. Create a product database with fields for images, descriptions, pricing, availability, and merchant
+
+0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
+
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories with an aim of creating a product database with fields for images, descriptions, pricing, availability, and merchant
+
 2. Develop a categorization system that organizes products by type, location, and source (in-store vs. online)
+
 3. Build a search function with filters for price range, category, and merchant
+
 4. Implement direct links to purchase pages for online sales or contact information for in-store purchases
+
 5. Create a merchant dashboard allowing sellers to add and update their product listings
+
 6. Launch with a selection of products from 5-7 participating merchants across different categories
 
