--- a/INFO/4.md
+++ b/INFO/4.md
@@ -13,10 +13,18 @@ This app complements the .store app, but it's mostly about HAPPENINGS ... specia
 Rockrapids.shop will create a dynamic digital showcase for the retail sector in Rock Rapids, highlighting special promotions, new merchandise arrivals, and unique shopping experiences to drive foot traffic to local businesses. The platform will celebrate the distinctive character of Main Street shopping through featured store profiles, merchant spotlights, and behind-the-scenes glimpses of local retail operations. Interactive event listings will promote shopping-adjacent experiences like wine tastings, sidewalk sales, holiday markets, and in-store demonstrations that transform retail into community entertainment. Push notifications for limited-time offers, flash sales, and seasonal clearances will help shoppers discover exceptional values while supporting local merchants. Curated shopping guides will help visitors discover themed retail experiences—from antique hunting to boutique fashion—that match their specific interests and enhance their Rock Rapids visit. User-generated content including reviews, photos, and shopping trip recaps will build an authentic community perspective on the retail landscape of Rock Rapids.
 
 **MVP Development Roadmap:**
-1. Develop a merchant profile system with store information, hours, categories, and contact details
+
+0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
+
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for developing a merchant profile system with store information, hours, categories, and contact details
+
 2. Create a promotions database with fields for sale dates, discount information, and product images
+
 3. Build an events calendar specifically for retail-related activities and special shopping experiences
+
 4. Implement a notification system for alerting users about new sales and limited-time offers
+
 5. Develop a simple content management system allowing merchants to update their own information
+
 6. Launch with 10-15 local merchant profiles and a calendar of summer shopping events
 
