--- a/INFO/6.md
+++ b/INFO/6.md
@@ -13,9 +13,17 @@ Not just local employment opportunities, but also remote work and other side hus
 Rockrapids.work will connect job seekers in Rock Rapids with employment opportunities both locally and remotely, supporting economic vitality while enabling residents to build careers without leaving the community they love. The platform will maintain a comprehensive database of local job openings with detailed descriptions, qualification requirements, and application instructions from businesses throughout Rock Rapids and neighboring areas. Remote work opportunities that are compatible with Rock Rapids residency will be featured prominently, highlighting positions that allow people to enjoy small-town living while participating in the broader digital economy. Resources for job seekers will include resume building tools, interview preparation guides, and skill development opportunities specific to industries relevant to the region. The platform will spotlight success stories of Rock Rapids residents who have built satisfying careers locally or found innovative ways to work remotely while maintaining their connection to the community. Employer profiles will showcase local businesses as workplaces, highlighting their company culture, growth opportunities, and contributions to the Rock Rapids economy.
 
 **MVP Development Roadmap:**
-1. Create a job listing database with fields for position details, requirements, salary ranges, and application methods
+
+0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
+
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for the purpose of creating a job leads listing database with fields for position details, requirements, salary ranges, and application methods
+
 2. Develop employer profiles for local businesses with information about their workplace and company culture
+
 3. Build a categorization system differentiating between local positions and remote opportunities
+
 4. Implement a simple job alert system notifying users about new positions matching their interests
+
 5. Create basic resume and application resources tailored to common local industries
+
 6. Launch with 15-20 active job listings from both local employers and remote work platforms
