--- a/INFO/7.md
+++ b/INFO/7.md
@@ -14,9 +14,17 @@ Volunteers do everything in the end ... this app is about coordinating and optim
 Rockrapids.xyz will serve as the central hub for volunteer engagement in Rock Rapids, connecting community needs with willing helpers while celebrating the spirit of service that strengthens the town's social fabric. The platform will showcase volunteer opportunities from various community organizations, clearly outlining the skills needed, time commitments, and positive impacts to help individuals find meaningful ways to contribute. Special recognition features will highlight exceptional volunteers through Volunteer of the Day/Month/Year programs, sharing their stories and contributions to inspire others in the community. Real-time tracking of community service projects will allow residents to see the tangible results of volunteer efforts, from park cleanups to food drives to emergency response initiatives. The platform will facilitate team formation for larger initiatives, connecting project leaders with potential volunteers and helping coordinate group efforts efficiently. Training resources and skill development opportunities will be featured to help volunteers build capabilities that benefit both their service activities and personal growth.
 
 **MVP Development Roadmap:**
-1. Develop a database of volunteer opportunities with details on organizations, time commitments, and skills needed
+
+0. Before launching anything ... gather intelligence on the already available sources of information and attempt to use those data in the form of data API
+
+1. Building on gathered intellenge, develop a general knowledgebase architecture to support a simple meta-directories of directories for developing a knowledgebase of volunteer opportunities with details on organizations, time commitments, and skills needed
+
 2. Create a volunteer profile system allowing users to list their skills, availability, and interests
+
 3. Build a simple application process for volunteers to express interest in specific opportunities
+
 4. Implement a recognition system for highlighting outstanding volunteer contributions
+
 5. Develop a project tracking dashboard showing progress on community initiatives
+
 6. Launch with 10-15 active volunteer opportunities from different community organizations
