--- a/INFO/0.md
+++ b/INFO/0.md
@@ -5,12 +5,9 @@ permalink: /FOSS/0/
 ---
 **INFO is the top level menu**
 
-The connection between the sister apps.
+*The connection between the sister apps.*
 
-Rockrapids.info will serve as a lightweight, centralized digital hub that aggregates the most essential information from all other Rock Rapids apps ... .ART .FUN .GUIDE .SHOP .STORE .XYZ .WORK ...  providing quick access to key highlights through abbreviated summaries and direct links. The platform will function as both an **entry point** for newcomers exploring Rock Rapids digital resources and a convenient dashboard for regular citizens and volunteers who want efficient access to information / opportunities across multiple domains. A **extra clean, sparse, minimalist interface** will organize content into logical categories that mirror the ... .ART .FUN .GUIDE .SHOP .STORE .XYZ .WORK sister apps ... eliminating unnecessary details on the top level *.INFO app ... since the full verbose details is available on sister apps for faster loading and easier navigation. The platform will prioritize time-sensitive current data and information like upcoming events, new job postings, and community alerts to ensure users stay informed about matters requiring immediate attention. **Intelligent content curation algorithms** will be developed to showcase trending topics and popular content from across the Rock Rapids digital ecosystem based on user engagement metrics. Personalization features will allow users to customize their information dashboard, somewhat, according to their specific interests, followed news and personal needs as members of the Rock Rapids community.
-
-
-
+RockRapids.INFO will serve as a lightweight, centralized digital hub that aggregates the most essential information from all other Rock Rapids apps ... .ART .FUN .GUIDE .SHOP .STORE .XYZ .WORK ...  providing quick access to key highlights through abbreviated summaries and direct links. The platform will function as both an **entry point** for newcomers exploring Rock Rapids digital resources and a convenient dashboard for regular citizens and volunteers who want efficient access to information / opportunities across multiple domains. A **extra clean, sparse, minimalist interface** will organize content into logical categories that mirror the ... .ART .FUN .GUIDE .SHOP .STORE .XYZ .WORK sister apps ... eliminating unnecessary details on the top level *.INFO app ... since the full verbose details is available on sister apps for faster loading and easier navigation. The platform will prioritize time-sensitive current data and information like upcoming events, new job postings, and community alerts to ensure users stay informed about matters requiring immediate attention. **Intelligent content curation algorithms** will be developed to showcase trending topics and popular content from across the Rock Rapids digital ecosystem based on user engagement metrics. Personalization features will allow users to customize their information dashboard, somewhat, according to their specific interests, followed news and personal needs as members of the Rock Rapids community.
 
 What follows below is a brief vision statement and Minimal Viable Prototype (MVP) development roadmap for **rockrapids.info**
 
